--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,8 @@
 {
     "version": "0.2.0",
     "configurations": [
+        
+
         {
             "command": "npm start",
             "name": "Run npm start",
@@ -25,7 +27,7 @@
             "type": "pwa-node",
             "name": "Run Current File",
             "request": "launch",
-            "program": "${workspaceFolder}\\conditionals.js"
+            "program": "${workspaceFolder}\\array.js"
         }
     ]
 }
